# SteamVR-OpenHMD

./: .gitmodules  0001-fix-up-mingw-makefile-to-work-on-linux-mingw.patch  CMakeLists.txt  README.md  Readme.md  SteamVR-OpenHMD.kdev4  WindowsPathsBase.sh  build-win64.txt  docker.sh  driver.vrdrivermanifest  driver_openhmd.cpp  driverlog.h  install_files_to_build.sh  meson.build  ohmd_config.h  paths.sh  register.sh  steamvr.vrsettings  unregister.sh
cmake/: FindOpenHMD.cmake  Findopenvr.cmake
docker/: Dockerfile  docker-compose.yml  start.sh
mingw-pkgconfig/: hidapi-libusb.pc  hidapi.pc
resources/: driver.vrresources
resources/input/: legacy_binding_openhmd_controller.json  openhmd_controller_profile.json  vrcompositor_bindings_openhmd.json
resources/settings/: default.vrsettings
